ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-07-07 Jochen Manz
	- ENGINE:
		* Fixed #1880: Update ISPCP failed

2009-07-05 Thomas Wacker
	- GUI:
		* Fixed #1500: Subdomain you are trying to remove has ftp & mail alias accounts
		* Added improved domain deletion

2009-07-04 Thomas Wacker
	- TOOLS:
		* Fixed #1878: Updated phpMyAdmin to version 3.2.0.1
	- GUI:
		* Added missing information in order e-mail settings

2009-07-02 Thomas Wacker
	- GUI:
		* Fixed #1860: Patch for domain expire date

2009-06-28 Thomas Wacker
	- GUI:
		* Fixed #1684: Orderpanel needs coverage

2009-06-21 Thomas Wacker
	- CONFIGS:
		* Fixed #1663: controlpanel redirect

2009-06-21 Thomas Wacker
	- GUI:
		* Fixed #1811: Problem with translation string

2009-06-16 Benedikt Heintel
	- TOOLS:
		* Fixed #1869: Updated phpMyAdmin to version 3.2.0

2009-06-15 Thomas Wacker
	- GUI:
		* Fixed #1868: Database update fails

2009-06-13 Thomas Wacker
	- GUI:
		* Added backtrace e-mail to admin in case of SQL error

2009-06-12 Thomas Wacker
	- GUI:
		* Fixed #1764: Problems in admin/reseller_edit.php

2009-06-12 Benedikt Heintel
	- DOCS:
		* Updated Debian INSTALL
		* Updated Ubuntu INSTALL
	- GUI:
		* Fixed #1854: Lost password page reword

2009-06-10 Benedikt Heintel
	- LANGUAGES:
		* Added Azerbaijani
		* Updated Japanese
		* Updated all .po files

2009-06-09 Thomas Wacker
	- GUI:
		* Fixed #1848: Suexecuser on Domain.ltd

2009-05-22 Daniel Andreca
	- GUI:
		* Fixed #1847: Manual DNS support us missing in user_add2.php

2009-05-22 Benedikt Heintel
	- DOCS:
		* Updated INSTALL files
	- ENGINE:
		* Added possible fix for autoresponder with amavis enabled
	- TOOLS:
		* Updated Squirrelmail to version 1.4.19
		* Fixed #1852: Squirrelmail page header modifications missing
		* Fixed #1853: Webmail Error r1793

2009-05-19 Benedikt Heintel
	- CONFIGS:
		* Fixed #1852: Add "AuthOrder" to the proftpd.conf
	- TOOLS:
		* Fixed #1838: Updated Squirrelmail to version 1.4.18