@@ -1,6 +1,12 @@
 ispCP ω 1.0.1 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-07-10 Malte Geierhos
+	- ENGINE: 
+		* Imported DNS-TimestampFix (thx to "Blondak") 
+	- GUI: 
+		* Fix for MANUAL DNS Lines (thx to "Blondak")
+
 2009-07-07 Jochen Manz
 	- ENGINE:
 		* Fixed #1880: Update ISPCP failed
